--- a/index.html
+++ b/index.html
@@ -230,9 +230,9 @@
         /* From Uiverse.io by Javierrocadev */ 
         .get-started-btn {
             position: relative;
-            background-color: #262626;
             height: 4rem;
-            width: 16rem;
+            width: 10.5rem;
+            background-color: rgb(0, 0, 0);
             border: 1px solid currentColor;
             text-align: left;
             padding: 0.75rem;
@@ -242,7 +242,6 @@
             border-radius: 0.5rem;
             overflow: hidden;
             transition-duration: 500ms;
-            text-decoration: underline;
             text-underline-offset: 2px;
         }
 
@@ -292,6 +291,64 @@
         .get-started-btn:hover::after {
             right: -2rem;
         }
+
+        /* Animated Background Elements */
+        .floating-blur {
+            position: fixed;
+            border-radius: 50%;
+            filter: blur(80px);
+            opacity: 0.4;
+            z-index: -1;
+            pointer-events: none;
+        }
+
+        .blur-1 {
+            width: 300px;
+            height: 300px;
+            background: rgb(253 164 175);
+            animation: float1 20s infinite linear;
+            top: 20%;
+            left: 15%;
+        }
+
+        .blur-2 {
+            width: 250px;
+            height: 250px;
+            background: rgb(139 92 246);
+            animation: float2 25s infinite linear;
+            bottom: 10%;
+            right: 15%;
+        }
+
+        @keyframes float1 {
+            0%, 100% {
+                transform: translate(0, 0);
+            }
+            25% {
+                transform: translate(40px, 40px);
+            }
+            50% {
+                transform: translate(0, 80px);
+            }
+            75% {
+                transform: translate(-40px, 40px);
+            }
+        }
+
+        @keyframes float2 {
+            0%, 100% {
+                transform: translate(0, 0);
+            }
+            25% {
+                transform: translate(-40px, -40px);
+            }
+            50% {
+                transform: translate(0, -80px);
+            }
+            75% {
+                transform: translate(40px, -40px);
+            }
+        }
     </style>
 </head>
 <body class="h-full">
@@ -315,8 +372,8 @@
                     </button>
                 </div>
                 <div class="hidden lg:flex lg:gap-x-12">
-                    <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Get Started</a>
-                    <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Connect with Specialists</a>
+                    <a href="questionnaire.html" class="text-sm font-semibold leading-6 text-gray-900">Get Started</a>
+                    <a href="specialists.html" class="text-sm font-semibold leading-6 text-gray-900">Connect with Specialists</a>
                     <a href="aboutus.html" class="text-sm font-semibold leading-6 text-gray-900">About us</a>
                 </div>
                 <div class="hidden lg:flex lg:flex-1 lg:justify-end">
@@ -326,7 +383,11 @@
 
         <div class="relative isolate px-6 pt-14 lg:px-8">
             <div class="absolute inset-x-0 -top-40 -z-10 transform-gpu overflow-hidden blur-3xl sm:-top-80" aria-hidden="true">
-                <div class="relative left-[calc(50%-11rem)] aspect-[1155/678] w-[36.125rem] -translate-x-1/2 rotate-[30deg] bg-gradient-to-tr from-[#ff80b5] to-[#9089fc] opacity-30 sm:left-[calc(50%-30rem)] sm:w-[72.1875rem]" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
+                <div class="relative left-[calc(50%-11rem)] aspect-[1155/678] w-[46.125rem] -translate-x-1/2 rotate-[30deg] bg-gradient-to-tr from-[#ff80b5] from-40% via-[#9089fc] via-70% to-[#3b82f6] opacity-25 sm:left-[calc(50%-30rem)] sm:w-[82.1875rem] animate-pulse" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
+            </div>
+
+            <div class="absolute inset-x-0 top-[calc(50%-500px)] -z-10 transform-gpu overflow-hidden blur-3xl" aria-hidden="true">
+                <div class="relative left-[calc(50%)] aspect-[1155/678] w-[40.125rem] -translate-x-1/2 rotate-[15deg] bg-gradient-to-tr from-[#ff80b5] from-40% via-[#9089fc] via-70% to-[#3b82f6] opacity-20 animate-pulse" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
             </div>
             
             <div class="mx-auto max-w-2xl py-32 sm:py-48 lg:py-56">
@@ -340,14 +401,14 @@
                     <p class="mt-6 text-lg leading-8 text-gray-600">Approved and created by Chartered Accountants who have crushed it, lived it and won it. This is free forever.</p>
                     <div class="mt-10 flex items-center justify-center gap-x-6">
                         <button class="get-started-btn group" onclick="window.location.href='questionnaire.html'">
-                            Get Started
+                            Start
                         </button>
                     </div>
                 </div>
             </div>
             
             <div class="absolute inset-x-0 top-[calc(100%-13rem)] -z-10 transform-gpu overflow-hidden blur-3xl sm:top-[calc(100%-30rem)]" aria-hidden="true">
-                <div class="relative left-[calc(50%+3rem)] aspect-[1155/678] w-[36.125rem] -translate-x-1/2 bg-gradient-to-tr from-[#ff80b5] to-[#9089fc] opacity-30 sm:left-[calc(50%+36rem)] sm:w-[72.1875rem]" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
+                <div class="relative left-[calc(50%+3rem)] aspect-[1155/678] w-[46.125rem] -translate-x-1/2 bg-gradient-to-tr from-[#ff80b5] from-40% via-[#9089fc] via-70% to-[#3b82f6] opacity-25 sm:left-[calc(50%+36rem)] sm:w-[82.1875rem] animate-pulse" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
             </div>
         </div>
     </div>
