--- a/aboutus.html
+++ b/aboutus.html
@@ -56,7 +56,7 @@
                         The stress, the chaos, the endless hours, it doesn't have to be that way. We started this to give every CA student a free, simple way to chart their path, connect with those who've won, and find the focus to succeed.
                     </p>
                     <p>
-                        It's our way of lighting the way, free forever, for the next generation of CAs.
+                        It's free forever. No ads, no sign-ups. It's our way of supporting the next generation of CAs.
                     </p>
                     <div class="pt-8">
                         <a href="index.html" class="inline-flex items-center text-indigo-600 hover:text-indigo-500 font-semibold">
