--- a/index.html
+++ b/index.html
@@ -416,8 +416,8 @@
                     </div>
                 </div>
                 <div class="text-center">
-                    <h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Clear winning strategy for CA exams</h1>
-                    <p class="mt-6 text-lg leading-8 text-gray-600">Approved and created by Chartered Accountants who have crushed it, lived it and won it. This is free forever.</p>
+                    <h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Winning strategy for<br> CA exams</h1>
+                    <p class="mt-6 text-lg leading-8 text-gray-600">Approved and built by Chartered Accountants who have crushed it, lived it and won it. This is free forever.</p>
                     <div class="mt-10 flex items-center justify-center gap-x-6">
                         <button class="get-started-btn" onclick="window.location.href='questionnaire.html'">
                             <div class="svg-wrapper-1">
