--- a/aboutus.html
+++ b/aboutus.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="text-gray-600 leading-relaxed space-y-6 max-w-2xl mx-auto">
                     <p>
-                        We built this app because we've been there. The grueling journey of the CA exams, where less than 10% make it through on the first attempt.
+                        We built this web app because we've been there. The grueling journey of the CA exams, where less than 10% make it through on the first attempt.
                     </p>
                     <p>
                         As a Chartered Accountant who conquered it in one attempt, I saw too many peers stumble, not because they lacked knowledge, but because they lacked a clear plan.
