--- a/specialists.html
+++ b/specialists.html
@@ -134,7 +134,7 @@
             <div class="mx-auto max-w-4xl py-32 sm:py-48">
                 <div class="text-center mb-16">
                     <h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Meet Our CA Specialists</h1>
-                    <p class="mt-6 text-lg leading-8 text-gray-600">Connect with experienced Chartered Accountants who can guide you through your CA journey.</p>
+                    <p class="mt-6 text-lg leading-8 text-gray-600">Personally reach out to Chartered Accountants who have crushed it, lived it and won it. Drop a simple email or a whatsapp message if you need any kind of advice/help.</p>
                 </div>
                 
                 <div class="cards-container">
