--- a/questionnaire.html
+++ b/questionnaire.html
@@ -832,7 +832,7 @@
         function confirmAndProceed() {
             const modal = document.getElementById('summary-modal');
             modal.classList.remove('active');
-            window.location.href = 'index.html';
+            window.location.href = 'report.html';
         }
 
         // Update the finishQuestionnaire function
